# clepsydra

./: .gitignore  COPYRIGHT  MANIFEST  Makefile.am  README.Developers  README.md  clepsydra.pro  configure.ac  copperspice.am  setup.py
.bzr/branch/: last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
app/: accounts.cpp  accounts.h  app.pro  config.h  database.cpp  database.h  database_base.h  granttabwidget.cpp  granttabwidget.h  limitstabwidget.cpp  limitstabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  statustabwidget.cpp  statustabwidget.h  user.cpp  user.h  users.cpp  users.h
app/other/: simplejson.cpp  simplejson.h
app/src/: clepsydradefaults.cpp  clepsydradefaults.h  helper.cpp  helper.h  limitsmapper.cpp  limitsmapper.h  logging.cpp  logging.h
app/tmp/: moc_clepsydradefaults.cpp  moc_grantuiwidget.cpp  moc_settings.cpp  moc_users.cpp
app/ui/: grant.ui  limits.ui  main.ui  status.ui
clepsydra/: clepsydra.pro
clepsydra/app/: accounts.cpp  accounts.h  app.pro  clepsydra  config.h  granttabwidget.cpp  granttabwidget.h  limitstabwidget.cpp  limitstabwidget.h  mainwindow.cpp  mainwindow.h  statustabwidget.cpp  statustabwidget.h  storage.cpp  user.cpp  user.h
clepsydra/app/src/: helper.cpp  helper.h  limitsmapper.cpp  limitsmapper.h  storage.cpp
clepsydra/app/tmp/: moc_accounts.cpp  moc_granttabwidget.cpp  moc_helper.cpp  moc_limitsmapper.cpp  moc_limitstabwidget.cpp  moc_mainwindow.cpp  moc_statustabwidget.cpp  moc_user.cpp
clepsydra/app/ui/: grant.ui  limits.ui  main.ui
clepsydra/config/clepsydra/: clepsydradefault  clepsydradefault.json  clepsydradefault_test.json
clepsydra/config/logrotate.d/: clepsydra
clepsydrad/: CMakeLists.txt  main.c  pamcheck.c  readconf.c
clepsydrad/clepsydrad/: CMakeLists.txt  main.c  readconf.c
clepsydrad/cmake/: FindJSON.cmake  FindPAM.cmake
config/: clepsydra.db  clepsydra.db.sql  clepsydra.sqlite  clepsydra_sqlite.text
config/clepsydra/: clepsydra.conf  clepsydra.json  clepsydradefault.json
data/: clepsydra.desktop  timekpr.desktop.in
debian/: changelog  clepsydra.init  clepsydra.postinst  clepsydra.postinst.debhelper  clepsydra.postrm  clepsydra.prerm.debhelper  control  copyright  install  manpages  rules
etc/clepsydra/: clepsydradefault.json
etc/timekpr/: clepsydradefault  timekpr.conf
pam/: pam-mine.py  pamtest.py
service/: CMakeList.txt  daemon.c
src/ui/: grant.ui  status.ui
timekpr/: __init__.py  timekpr.py
timekpr_stuff/: README  setup.cfg  timekprc_example
timekpr_stuff/data/: clepsydra.desktop.in
timekpr_stuff/timekpr/: dirs.py.in  timekprd.py
user-accounts/: um-password-dialog.c  um-user-panel.c  um-user.c  um-utils.c  um-utils.h
